# mc-mandelbrot-set

./: .gitignore  Cargo.toml
src/: main.rs  renderer.rs
src/assets/: renderer.cu
